--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,9 @@
     <link href="/images/favicon.png" rel="icon" type="image/png">
 </head>
 <body style="background-image: url(https://source.unsplash.com/RFHFV7lVQBY/1600x900);">
-<blockquote><strong>Debugging</strong> /de·bugh·ing/ <em>verb</em><br/>The Classic Mystery Game where you are the detective, the victim, and the murderer.
-</blockquote>
+<div style="background-image: src="/images/1.jpg"; background-size: cover; background-position: center;">
+    <blockquote><strong>Debugging</strong> /de·bugh·ing/ <em>verb</em><br/>The Classic Mystery Game where you are the detective, the victim, and the murderer.
+    </blockquote>
+</div>
 </body>
 </html>
